<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of A New Reader
  ~ Copyright (C) 2013 Timothy McCarthy
  ~
  ~ A New Reader is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ A New Reader is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with A New Reader.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">A New Reader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_testing">Testing</string>
    <string name="title_activity_item_list">Item List Activity</string>
    <string name="all_items">All Items</string>
    <string name="connection_error">Connection error: </string>
    <string name="authenticating">Authenticating</string>
    <string name="retrieving_categories">Retrieving categories</string>
    <string name="feed_load_error_message">Error loading feeds \n Tap to try again</string>
    <string name="refresh_icon">Refresh Icon</string>
    <string name="title_activity_item_view">Item View Activity</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="authenticated">Authenticated</string>
    <string name="downloading_feeds">Downloading feeds</string>
    <string name="feeds_downloaded">Feeds downloaded</string>
    <string name="authentication_error_message">Error authentication \n Tap to try again</string>
    <string name="rendering_feeds">Rendering feeds</string>
    <string name="ellipses">…</string>
    <string name="loading_more_items">Loading more items</string>
    <string name="title_activity_authenticate">Authenticate Activity</string>
    <string name="reader_service">Reader Service</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="authentication_failed">Authentication failed</string>

</resources>
